<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddIncomeActivity" >

    <TextView
        android:id="@+id/textViewDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewAmount"
        android:layout_below="@+id/textViewAmount"
        android:layout_marginTop="36dp"
        android:text="@string/date_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/notesText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textViewNotes"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textMultiLine" />

    <Button
        android:id="@+id/addIncomeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="addIncome"
        android:text="@string/add_income_button" />

    <TextView
        android:id="@+id/textViewNotes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textViewDate"
        android:layout_below="@+id/textViewDate"
        android:layout_marginTop="40dp"
        android:text="@string/notes_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textViewAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/amountText"
        android:layout_alignParentLeft="true"
        android:text="@string/amount_label"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/amountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="28dp"
        android:digits="0123456789."
        android:ems="10"
        android:hint="@string/amount_hint"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/dateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textViewDate"
        android:layout_alignBottom="@+id/textViewDate"
        android:layout_alignLeft="@+id/amountText"
        android:layout_alignParentRight="true"
        android:onClick="showDatePickerDialog" />

</RelativeLayout>